2005-07-28 11:38 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) addd to start
	code on getting that edge in.

2005-07-28 09:25 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptLongShortCurved,gridAdaptLongShortLinear)
	branched from gridAdaptLongShort to explore linear edge insertion.
	* src/unit_main.c (main) turn off valid cost constraint
	gridCOST_CNST_VALID. call gridAdaptLongShortCurved or
	gridAdaptLongShortLinear with test on gridCOST_CNST_VALID.

2005-07-28 09:00 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.8 Release. ** internal release ** Tagging to test new
	direction for linear elements.

2005-07-27 16:10 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) refactored to be more like
	gridSplitEdgeRatio and allow edge splits.

2005-07-27 10:23 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) produce stdout msg that
	can not split inbetween faces
	* src/gridinsert.c (gridAdaptLongShort,gridSplitEdgeRepeat,
	gridSplitEdgeForce) propigated debug_split

2005-07-27 08:32 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptLongShort) if gridSplitEdgeRatio is
	unsucessful call gridSplitEdgeRepeat to debug insertion
	difficulties.
	* src/gridinsert.c (gridSplitEdgeRepeat) created to get edges
	split by trying more complex algorithms and to understand the
	difficulties. (this version stripped out some hacks I had earlier.)

2005-07-26 15:05 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMinInsertCost,gridSetMinInsertCost) added to
	allow the min insert (split,collapse) cost to be adjusted on the
	fly to replace gridADAPT_COST_FLOOR.
	* src/gridinsert.c (gridCollapseEdge,gridSplitEdgeForce,
	gridSplitEdgeRatio) use gridMinInsertCost to accept action.
	* src/gridmetric.c (gridADAPT_COST_FLOOR) removed #define
	
2005-07-26 14:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) started a little routine